--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,17 @@
 % -*- mode: erlang -*-
+{require_otp_vsn, "R16B.*|[1-9].*"}.
+
 {port_envs, [{"^(?!.*win32)", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter"},
              {"^(?!.*win32)", "DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"},
              {"win32", "CFLAGS", "/IF:/MyProgramming/sqlite-amalgamation /Ic_src /W4 /wd4100 /wd4204"},
              {"win32", "LDFLAGS", "sqlite3.lib"}]}.
+
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
+
+{deps, 
+  [{rebar_vsn_plugin, "",
+     {git, "https://github.com/erlware/rebar_vsn_plugin.git",
+      {branch, "master"}}}]}.
+{plugins, [rebar_vsn_plugin]}.
+{plugin_dir, "deps/rebar_vsn_plugin/src"}.
