--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 % -*- mode: erlang -*-
 {port_envs, [{"^(?!.*win32)", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
              {"^(?!.*win32)", "DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"},
-             {"win32", "CFLAGS", "/O2 /Isqlite3_amalgamation /Ic_src /W4 /wd4100 /wd4204"},
+             {"win32", "CFLAGS", "/O2 /Isqlite3_amalgamation /Ic_src /W4 /wd4100 /wd4204 /wd9024"},
              {"win32", "LDFLAGS", "sqlite3.lib"}]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
