--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,12 @@
 % -*- mode: erlang -*-
 {port_specs, [{"priv/sqlite3_drv.so", ["c_src/*.c"]},
               {"darwin", "priv/sqlite3_drv.so", ["c_src/*.c", "sqlite3_amalgamation/*.c"]}]}.
-{port_env, [{"DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
-            {"DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"},
-            {"darwin", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
+{port_env, [{"darwin", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
             {"darwin", "DRV_LDFLAGS", "$DRV_LDFLAGS"},
             {".*win32.*", "DRV_CFLAGS", "$DRV_CFLAGS /O2 /Isqlite3_amalgamation /Ic_src /W4 /wd4100 /wd4204 /wd4820 /wd4255 /wd4668 /wd4710 /wd4711"},
-            {".*win32.*", "DRV_LDFLAGS", "$DRV_LDFLAGS sqlite3.lib"}]}.
+            {".*win32.*", "DRV_LDFLAGS", "$DRV_LDFLAGS sqlite3.lib legacy_stdio_definitions.lib"},
+            {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
+            {"linux", "DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"}
+            ]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
