--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ config.tmp
 *.pdb
 *.beam
 ebin/
-priv/
+priv/*.exp
+priv/*.lib
 .eunit/
 doc/
 sqlite3.plt
@@ -20,7 +21,6 @@ TEST*.xml
 *.exp
 *.lib
 *.obj
-*.dll
 *.o
 *.so
 # crash dump
