Add sqlite3:filename/1 command

--- a/rebar.config
+++ b/rebar.config
@@ -10,3 +10,6 @@
             ]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
+
+{clean_files, ["priv/*.exp", "priv\\*.lib"]}.
+{post_hooks, [{"win32", compile, "del priv\\*.exp priv\\*.lib"}]}.
