--- a/rebar.config
+++ b/rebar.config
@@ -12,4 +12,4 @@
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 
 {clean_files, ["priv/*.exp", "priv\\*.lib"]}.
-{post_hooks, [{"win32", compile, "del priv\\*.exp priv\\*.lib"}]}.
+{post_hooks, [{"win32", compile, "del /Q priv\\*.exp priv\\*.lib 2>NUL"}]}.
