--- a/rebar.config
+++ b/rebar.config
@@ -11,5 +11,7 @@
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 
-{clean_files, ["priv/*.exp", "priv\\*.lib"]}.
-{post_hooks, [{"win32", compile, "del /Q priv\\*.exp priv\\*.lib 2>NUL"}]}.
+{clean_files, ["priv/*.exp", "priv/*.lib", "c_src/*.d"]}.
+{post_hooks, [{"win32", compile, "del /Q priv\\*.exp priv\\*.lib 2>NUL"},
+              {"linux", compile, "rm -f c_src/*.d"}]}.
+
