Add table_exists/1,2,3 functions

--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,7 @@
               {"darwin", "priv/sqlite3_drv.so", ["c_src/*.c", "sqlite3_amalgamation/*.c"]}]}.
 {port_env, [{"darwin", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
             {"darwin", "DRV_LDFLAGS", "$DRV_LDFLAGS"},
+            % Win32 - for preprocessor debugging add /P /C
             {".*win32.*", "DRV_CFLAGS", "$DRV_CFLAGS /O2 /Isqlite3_amalgamation /Ic_src /W4 /wd4100 /wd4204 /wd4820 /wd4255 /wd4668 /wd4710 /wd4711 /wd5045"},
             {".*win32.*", "DRV_LDFLAGS", "$DRV_LDFLAGS sqlite3.lib legacy_stdio_definitions.lib"},
             {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
@@ -12,6 +13,8 @@
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 
 {clean_files, ["priv/*.exp", "priv/*.lib", "c_src/*.d"]}.
+{pre_hooks,  [{"win32", compile, "del /Q priv\\*.exp priv\\*.lib 2>NUL"},
+              {"linux", compile, "rm -f c_src/*.d"}]}.
 {post_hooks, [{"win32", compile, "del /Q priv\\*.exp priv\\*.lib 2>NUL"},
               {"linux", compile, "rm -f c_src/*.d"}]}.
 
