Update driver file naming convention

--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,7 @@
             % Win32 - for preprocessor debugging add /P /C
             {".*win32.*", "DRV_CFLAGS", "$DRV_CFLAGS /O2 /Isqlite3_amalgamation /Ic_src /W4 /wd4100 /wd4204 /wd4820 /wd4255 /wd4668 /wd4710 /wd4711 /wd5045"},
             {".*win32.*", "DRV_LDFLAGS", "$DRV_LDFLAGS sqlite3.lib legacy_stdio_definitions.lib"},
+            % Linux - for preprocessor debugging add -E
             {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
             {"linux", "DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"}
             ]}.
