--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,8 @@
             {".*win32.*", "DRV_CFLAGS", "$DRV_CFLAGS /O2 /Isqlite3_amalgamation /Ic_src /W4 /wd4100 /wd4204 /wd4820 /wd4255 /wd4668 /wd4710 /wd4711 /wd5045"},
             {".*win32.*", "DRV_LDFLAGS", "$DRV_LDFLAGS legacy_stdio_definitions.lib"},
             % Linux - for preprocessor debugging add -E
-            {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"},
+            {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"
+                                    " -Wno-cast-function-type -Wno-implicit-fallthrough"},
             {"linux", "DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"}
             ]}.
 {cover_enabled, true}.
