--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,11 @@ config.tmp
 ebin/
 priv/*.exp
 priv/*.lib
+priv/*.so
+priv/*.dll
 .eunit/
 doc/
 sqlite3.plt
-sqlite3.dll
-sqlite3.so
 TEST*.xml
 *.db
 *.exp
