Fix for OTP 23.0 build

--- a/rebar.config
+++ b/rebar.config
@@ -9,6 +9,7 @@
             % Linux - for preprocessor debugging add -E
             {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -Wall -Wextra -Wno-unused-parameter -Wstrict-prototypes"
                                     " -Wno-cast-function-type -Wno-implicit-fallthrough"},
+            {"linux", "ERL_LDFLAGS", " -L$ERL_EI_LIBDIR -lei"},
             {"linux", "DRV_LDFLAGS", "$DRV_LDFLAGS -lsqlite3"}
             ]}.
 {cover_enabled, true}.
