--- a/rebar.cross_compile.config.sample
+++ b/rebar.cross_compile.config.sample
@@ -8,6 +8,6 @@
              {"ERL_INTERFACE_LIB", "$OTPROOT_CROSS_COMPILED/lib/erl_interface-$ERL_INTERFACE_VERSION/lib"},
              {"CC", "$CROSS_COMPILE_TOOLCHAIN/bin/$HOST-gcc"},
              {"LD", "$CROSS_COMPILE_TOOLCHAIN/bin/$HOST-ld"},
-             {"ERL_LDFLAGS", " -L$ERL_INTERFACE_LIB -lerl_interface -lei"},
+             {"ERL_LDFLAGS", " -L$ERL_INTERFACE_LIB -lei"},
              {"DRV_LDFLAGS", "$DRV_LDFLAGS -L$SQLITE_CROSS_COMPILED/usr/local/lib -lsqlite3"},
              {"DRV_CFLAGS", "$DRV_CFLAGS -I$SQLITE_CROSS_COMPILED/usr/local/include"}]}.
